Colaboratory를 통해 생성됨

--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPO8MVl206tYXTd3voebfPG",
+      "authorship_tag": "ABX9TyNqLQDwGGBOxsvzA1OU97VH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -816,12 +816,114 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "newsdata_test = fetch_20newsgroups(subset='test', shuffle=True)\n",
+        "train_email = data['email']\n",
+        "train_label = data['target']\n",
+        "test_email = newsdata_test.data\n",
+        "test_label = newsdata_test.target"
+      ],
       "metadata": {
         "id": "ggZu42UMh-3e"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vocab_size = 10000\n",
+        "num_classes = 20"
+      ],
+      "metadata": {
+        "id": "p4ELMmhniezM"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def prepare_data(train_data, test_data, mode): # 전 처 리 함 수\n",
+        "\n",
+        "  tokenizer = Tokenizer(num_words = vocab_size) # vocab_size 개수 만큼의 단어만 사용한다.\n",
+        "  tokenizer.fit_on_texts(train_data)\n",
+        "  X_train = tokenizer.texts_to_matrix(train_data, mode=mode) # 샘 플 수 × vocab_size 크기의 행렬 생성\n",
+        "  X_test = tokenizer.texts_to_matrix(test_data, mode=mode) # 샘 플 수 × vocab_size 크기의 행렬 생성\n",
+        "  return X_train, X_test, tokenizer.index_word"
+      ],
+      "metadata": {
+        "id": "QrnLS2Bwie3m"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, index_to_word = prepare_data(train_email, test_email, 'binary') # binary모드로 변환\n",
+        "y_train = to_categorical(train_label, num_classes) # 원-핫 인 코 딩\n",
+        "y_test = to_categorical(test_label, num_classes) # 원-핫 인 코 딩"
+      ],
+      "metadata": {
+        "id": "cvON8Ua_i8L_"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('훈련 샘플 본문의 크기 : {}'.format(X_train.shape))\n",
+        "print('훈련 샘플 레이블의 크기 : {}'.format(y_train.shape))\n",
+        "print('테스트 샘플 본문의 크기 : {}'.format(X_test.shape))\n",
+        "print('테스트 샘플 레이블의 크기 : {}'.format(y_test.shape))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vt7Hn5KLi8OQ",
+        "outputId": "76241661-53ab-4459-f771-aaefbd99517e"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "훈련 샘플 본문의 크기 : (11314, 10000)\n",
+            "훈련 샘플 레이블의 크기 : (11314, 20)\n",
+            "테스트 샘플 본문의 크기 : (7532, 10000)\n",
+            "테스트 샘플 레이블의 크기 : (7532, 20)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('빈도 수 상위 1번 단어: {}'.format(index_to_word[1]))\n",
+        "print('빈도 수 상위 9999번 단어: {}'.format(index_to_word[9999]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W_cggezKi8QX",
+        "outputId": "f731182a-689a-4581-d738-24f85780acb7"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "빈도 수 상위 1번 단어: the\n",
+            "빈도 수 상위 9999번 단어: mic\n"
+          ]
+        }
+      ]
     }
   ]
 }
