Colaboratory를 통해 생성됨

--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqLQDwGGBOxsvzA1OU97VH",
+      "authorship_tag": "ABX9TyNAtOEK9F5TFnW8mQafPi5h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -924,6 +924,58 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout"
+      ],
+      "metadata": {
+        "id": "p-kgnDkfjx8C"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fit_and_evaluate(X_train, y_train, X_test, y_test):\n",
+        "  model = Sequential()\n",
+        "  model.add(Dense(256, input_shape=(vocab_size,), activation='relu'))\n",
+        "  model.add(Dropout(0.5))\n",
+        "  model.add(Dense(128, activation='relu'))\n",
+        "  model.add(Dropout(0.5))\n",
+        "  model.add(Dense(num_classes, activation='softmax'))\n",
+        "  model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=[' accuracy'])\n",
+        "  model.fit(X_train, y_train, batch_size=128, epochs=5, verbose=1,\n",
+        "        validation_split=0.1)\n",
+        "  score = model.evaluate(X_test, y_test, batch_size=128, verbose=0)\n",
+        "  return score[1]"
+      ],
+      "metadata": {
+        "id": "2P-8dYLRjx-l"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PMUxCba9kIbz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_v2kli2RkIeI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
