--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNAtOEK9F5TFnW8mQafPi5h",
+      "authorship_tag": "ABX9TyMg+zsk8X63QZqFiDngEtBb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
       "metadata": {
         "id": "H68VMxoYdBxP"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "dw1bXD-DdBzR"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "id": "6Nwr4LTndB1F",
         "outputId": "8286de03-8cf8-42ed-b62a-d23b7e775e97"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
         "id": "y5QgZmwLdB2p",
         "outputId": "d7f02db7-844a-4e01-8cee-3727290ca645"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
         "id": "bpRE1tzOdB4O",
         "outputId": "7c0fc1f4-2467-4fdd-c72f-b710fa048426"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +138,7 @@
         "id": "XHmi46bbfgsd",
         "outputId": "5fa735c8-b11c-49d4-d49a-e1ff8d792fee"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "id": "oHo6zRF0fgvR",
         "outputId": "d1048a46-fb24-45dd-8353-50a6374785b5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +190,7 @@
       "metadata": {
         "id": "HMEj_UORgsXh"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "gI8UcKl6gsZz"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -216,7 +216,7 @@
         "id": "qdaELGMRgsb4",
         "outputId": "efca3c55-da89-4d10-c9cd-c4423ea86fa6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
         "id": "SdKz9MSEgsdu",
         "outputId": "d8a8188b-6e2e-410a-f28a-15df725a3aae"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +263,7 @@
         "id": "jBEqrKBXhClV",
         "outputId": "749a65c9-81b0-4080-a138-ae3c6b2686a0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +287,7 @@
         "id": "LfchNvLzhCnX",
         "outputId": "eb07c264-513f-4303-f7f4-309c3b8b8c7a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +310,7 @@
         "id": "tx1rhG-XhCp-",
         "outputId": "c2e6dd80-005c-4315-e22f-9a351f74e810"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +333,7 @@
         "id": "z4zMNMxGhVw3",
         "outputId": "4b390f50-b119-486a-e7e2-05095e8f0984"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,7 +380,7 @@
         "id": "IlHj_EmZhV0P",
         "outputId": "6cd9550b-8058-4087-83da-9e7ffeb4788b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -674,7 +674,7 @@
         "id": "si8xp_mLhp42",
         "outputId": "3c910e4d-abb3-4623-e350-2f4199adf182"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,7 +705,7 @@
         "id": "tdoLb87Thp7J",
         "outputId": "1e81d50d-2152-460f-907b-58901fb2999b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,7 +732,7 @@
         "id": "_ctBC0jxh-w_",
         "outputId": "d4d3165f-e4f0-40e7-c90d-057f4946cb9f"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +757,7 @@
         "id": "5lVQ_CZkh-zT",
         "outputId": "7ebb5238-6103-470b-d049-bc36eb501cef"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -783,7 +783,7 @@
         "id": "gng4a3Hzh-1Z",
         "outputId": "98e093a2-d0c0-40f9-f548-034b0c681849"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,7 +826,7 @@
       "metadata": {
         "id": "ggZu42UMh-3e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -838,7 +838,7 @@
       "metadata": {
         "id": "p4ELMmhniezM"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -855,7 +855,7 @@
       "metadata": {
         "id": "QrnLS2Bwie3m"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -868,7 +868,7 @@
       "metadata": {
         "id": "cvON8Ua_i8L_"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -886,7 +886,7 @@
         "id": "vt7Hn5KLi8OQ",
         "outputId": "76241661-53ab-4459-f771-aaefbd99517e"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +913,7 @@
         "id": "W_cggezKi8QX",
         "outputId": "f731182a-689a-4581-d738-24f85780acb7"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -934,7 +934,7 @@
       "metadata": {
         "id": "p-kgnDkfjx8C"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -956,17 +956,39 @@
       "metadata": {
         "id": "2P-8dYLRjx-l"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "modes = ['binary', 'count', 'tfidf', 'freq'] # 4개의 모드를 리스트에 저장.\n",
+        "\n",
+        "for mode in modes: # 4개의 모드에 대해서 각각 아래의 작업을 반복한다.\n",
+        "    X_train, X_test, _ = prepare_data(train_email, test_email, mode) #모드에 따라서 데이터를 전처리"
+      ],
       "metadata": {
-        "id": "PMUxCba9kIbz"
+        "id": "PMUxCba9kIbz",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 251
+        },
+        "outputId": "59010373-aaf3-44ee-945b-17c244f57deb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-c8d9392d0663>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodes\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# 4개의 모드에 대해서 각각 아래의 작업을 반복한다.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprepare_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_email\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_email\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 모 드 에 따 라서 데이터를 전처리\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfit_and_evaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 모 델 을 훈 련 하 고 평가.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m' 모드의 테스트 정확도:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'prepare_data' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
