Colaboratory를 통해 생성됨

--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxlbbimM4zZj6NT/2i/WYu",
+      "authorship_tag": "ABX9TyOkhMDJYenjnFi98BRWR7kH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1502,6 +1502,34 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 서브 워드 텍스트 인코더를 사용하여 질문, 답변 데이터로부터 단어 집합 생성\n",
+        "\n",
+        "tokenizer = tfds.deprecated.text.SubwordTextEncoder.build_from_corpus(questions + answers, target_vocab_size = 2**13)"
+      ],
+      "metadata": {
+        "id": "bY2Bbw5krdkN"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 시작 토큰과 종료 토큰에 대한 정수 부여\n",
+        "START_TOKEN, END_TOKEN = [tokenizer.vocab_size], [tokenizer.vocab_size + 1]\n",
+        "\n",
+        "# 시작 토큰과 종료 토큰을 고려하여 단어 집합의 크기를 +2\n",
+        "VOCAB_SIZE = tokenizer.vocab_size + 2"
+      ],
+      "metadata": {
+        "id": "ZpadB0FCrdnS"
+      },
+      "execution_count": 46,
+      "outputs": []
     }
   ]
 }
