Colaboratory를 통해 생성됨

--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOkhMDJYenjnFi98BRWR7kH",
+      "authorship_tag": "ABX9TyNbw0z6JxjxogfxvcAdZVSX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1528,7 +1528,43 @@
       "metadata": {
         "id": "ZpadB0FCrdnS"
       },
-      "execution_count": 46,
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('시작 토큰 번호: ', START_TOKEN)\n",
+        "print('종료 토큰 번호: ',END_TOKEN)\n",
+        "print('단어 집합의 크기: ', VOCAB_SIZE)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "swVt1xq_shps",
+        "outputId": "7b6f8094-46d4-4275-d221-15acce1b652b"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "시작 토큰 번호:  [8180]\n",
+            "종료 토큰 번호:  [8181]\n",
+            "단어 집합의 크기:  8182\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "toDS0lvGshry"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
