Colaboratory를 통해 생성됨

--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbw0z6JxjxogfxvcAdZVSX",
+      "authorship_tag": "ABX9TyPWJJ0oq/zq3OejwSxDFZom",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1560,9 +1560,147 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 정수 인코딩과 패딩"
+      ],
       "metadata": {
         "id": "toDS0lvGshry"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 서브워드텍스트인코더 토크나이저의 .encode()를 사용하여 텍스트 시퀀스를 정수 시퀀 스로 변환.\n",
+        "print(' 임의의 질문 샘플을 정수 인코딩 : {}'.format(tokenizer.encode(questions[20])))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JupBue8KtHo5",
+        "outputId": "7c2580ef-f6fb-4fa6-b13c-9097bdbfd3e4"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " 임의의 질문 샘플을 정수 인코딩 : [5766, 611, 3509, 141, 686, 3747, 851]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 서브워드텍스트인코더 토크나이저의 .encode()와 .decode() 테스트해보기 # 임의의 입력 문장을 sample_string에 저장\n",
+        "sample_string = questions[20]\n",
+        "# encode() : 텍스트 시퀀스 --> 정수 시퀀스\n",
+        "tokenized_string = tokenizer.encode(sample_string)\n",
+        "print (' 정 수 인 코 딩 후 의 문 장 {}'.format(tokenized_string))\n",
+        "# decode() : 정수 시퀀스 --> 텍스트 시퀀스\n",
+        "original_string = tokenizer.decode(tokenized_string)\n",
+        "print('기존 문장: {}'.format(original_string))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CqTjU0yAtHrP",
+        "outputId": "4016c04f-708b-4f7d-dcd3-dd218344ed3b"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " 정 수 인 코 딩 후 의 문 장 [5766, 611, 3509, 141, 686, 3747, 851]\n",
+            "기존 문장: 가스비 비싼데 감기 걸리겠어\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 각 정수는 각 단어와 어떻게 mapping되는지 병렬로 출력\n",
+        "# 서브 워드 텍스트 인코더는 의미있는 단위의 서브워드로 토크나이징한다. 띄어쓰기 단위X 형태소 분석 단위X\n",
+        "for ts in tokenized_string:\n",
+        "    print ('{} ----> {}'.format(ts, tokenizer.decode([ts])))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SC01yq0GtpT2",
+        "outputId": "86b65fbe-d832-4d60-d2f7-d89c6f964b1f"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5766 ----> 가스\n",
+            "611 ----> 비 \n",
+            "3509 ----> 비싼\n",
+            "141 ----> 데 \n",
+            "686 ----> 감기 \n",
+            "3747 ----> 걸리\n",
+            "851 ----> 겠어\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 최대 길이를 40으로 정의\n",
+        "MAX_LENGTH = 40\n",
+        "#토큰화/정수인코딩/시작토큰과종료토큰추가/패딩\n",
+        "def tokenize_and_filter(inputs, outputs):\n",
+        "  tokenized_inputs, tokenized_outputs = [], []\n",
+        "  for (sentence1, sentence2) in zip(inputs, outputs):\n",
+        "# encode(토큰화 + 정수 인코딩), 시작 토큰과 종료 토큰 추가\n",
+        "    sentence1 = START_TOKEN + tokenizer.encode(sentence1) + END_TOKEN\n",
+        "    sentence2 = START_TOKEN + tokenizer.encode(sentence2) + END_TOKEN\n",
+        "    tokenized_inputs.append(sentence1)\n",
+        "    tokenized_outputs.append(sentence2)\n",
+        "#패딩\n",
+        "tokenized_inputs = tf.keras.preprocessing.sequence.pad_sequences(tokenized_inputs, maxlen=MAX_LENGTH, padding='post')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 215
+        },
+        "id": "orx86aZntpWL",
+        "outputId": "39f315cd-faa7-4773-9b91-638bb9b568b1"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-55-38c8b74cfc42>\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mtokenized_outputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentence2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m#패딩\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mtokenized_inputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msequence\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpad_sequences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenized_inputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxlen\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mMAX_LENGTH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'post'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'tokenized_inputs' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Tc_R1Y-5tpYh"
       },
       "execution_count": null,
       "outputs": []
